Style : Navbar fix on smaller devices

--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -11,6 +11,10 @@ body {
   margin: 0;
 }
 
+.navbar {
+  width: 100%;
+}
+
 .bar {
   position: absolute;
   height: 100%;
